--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "date-fns": "^4.1.0",
+    "history": "^5.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-input-mask": "^2.0.4",
@@ -18,6 +19,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
+    "redux-mock-store": "^1.5.5",
     "redux-toolkit": "^1.1.2",
     "sass": "^1.85.1",
     "typescript": "^4.9.5",
